# simple-border-gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  sample-config.toml
.github/workflows/: build.yaml  ci.yaml
docs/: HOWTO.md
src/: config.rs  inbound.rs  lib.rs  main.rs  matrix_spec.rs  membership.rs  outbound.rs  tests_util.rs  util.rs
src/http_gateway/: inbound.rs  mod.rs  outbound.rs  util.rs
src/inbound/: handlers.rs  mod.rs  router.rs  tests.rs
src/matrix/: mod.rs  spec.rs  util.rs  xmatrix.rs
src/outbound/: handlers.rs  mod.rs  tests.rs
tests/: inbound.rs  outbound.rs
