[package]
name = "simple-border-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["http2", "tokio"] }
axum-extra = { version = "0.10", features = ["typed-header"] }

hudsucker = { version = "0.23", default-features = false, features = ["http2", "rcgen-ca", "rustls-client"] }

reqwest = { version = "0.12", default-features = false, features = ["http2", "stream", "rustls-tls-native-roots-no-provider"] }

rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rcgen = { version = "0.13", default-features = false }

hyper = { version = "1" }

tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }

http = "1"

ruma = { version = "0.12", default-features = false, features = ["server-util", "signatures"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

bytes = "1"
tracing = "0.1"
log = "0.4"
env_logger = "0.11"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures = "0.3"
http-body-util = "0.1"

regex = "1"

toml = "0.8"

[dev-dependencies]
axum-test = "17"
httpmock = "0.8.0-alpha.1"
tempfile = "3"
async_once = "0.2"

[features]
default = ["aws_lc_rs"]
ring = ["rustls/ring"]
aws_lc_rs = ["rustls/aws_lc_rs", "rcgen/aws_lc_rs"]
